Bug 167335 - Lokalize catalog manager does not show statistic informations for *some* of the files
Summary: Lokalize catalog manager does not show statistic informations for *some* of t...
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Nick Shaforostoff
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-24 03:51 UTC by Franklin Weng
Modified: 2008-08-02 14:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
lokalize screenshot (83.12 KB, image/png)
2008-07-24 04:02 UTC, Franklin Weng
Details
console log for lokalize (8.25 KB, text/plain)
2008-07-31 03:54 UTC, Franklin Weng
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Franklin Weng 2008-07-24 03:51:46 UTC
Version:            (using KDE 4.0.98)
Installed from:    Mandriva RPMs

I followed the suggestion of bug 160648 to install the strigi-analyzer.  Now my catalog manager can show file statistics, but some are still missing.  This is smiliar to KBabel in KDE3 to manage KDE4 translations - some files had parsing error and hence showed a question mark for that file.
Comment 1 Franklin Weng 2008-07-24 04:02:12 UTC
Created attachment 26368 [details]
lokalize screenshot

This is what I got for opening the catalog manager.  The project is trunk KDE4.
Comment 2 Karl Ove Hufthammer 2008-07-24 17:22:14 UTC
I would guess this is because the files actually *do* contain syntax errors. Or, this has already been fixed. In any case, Lokalize currently displays information for all files for me. So I guess this bug report should be closed (I don't have permissions to do so).
Comment 3 Franklin Weng 2008-07-25 05:31:32 UTC
You can bet that there are *no* syntax errors in those files.  Some very simple files like kdebase/kio_finger.po it could not show statistics.  I used "msgfmt --strict -c messages/kdebase/kio_finger.po" it did not tell me any error messages.
Comment 4 Franklin Weng 2008-07-31 03:54:26 UTC
Created attachment 26521 [details]
console log for lokalize

This log file is when I opened the kio_finger.po on my side.  I launched
lokalize from command line, and it showed these messages when I opened this
file.  I hope that it is helpful to describe this problem.
Comment 5 Nick Shaforostoff 2008-08-02 14:34:10 UTC
SVN commit 841002 by shaforo:

don't fail when header has no comments at all.

this leaves few files failing, but thats due to another reason (comment too long),
and that's ain't easily fixable due to strigi limitation of headersize in StreamEndAnalyzer::checkHeader().
users should remove redundant lines from comment in those files themselves
(e.g. http://websvn.kde.org/trunk/l10n-kde4/zh_TW/messages/kdebase/kcmbackground.po)


BUG: 167335


 M  +1 -1      poendanalyzer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=841002