don't fail when header has no comments at all.

this leaves few files failing, but thats due to another reason (comment too long),
and that's ain't easily fixable due to strigi limitation of headersize in StreamEndAnalyzer::checkHeader().
users should remove redundant lines from comment in those files themselves
(e.g. http://websvn.kde.org/trunk/l10n-kde4/zh_TW/messages/kdebase/kcmbackground.po)


BUG: 167335

svn path=/branches/KDE/4.1/kdesdk/strigi-analyzer/; revision=841002